tests/lang_types/typeclass/ttypeclass_disallow_recursion.nim
discard """
  description: "Type Classes cannot reference themselves"
  errormsg: "illegal recursion in type 'Foo'"
"""

type
  Foo = int | Foo
